--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -3,22 +3,24 @@
 
 <head>
     <title>Tic-Tac-Toe</title>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="stlye.css">
 </head>
 
 <body>
     <h1>Tic-Tac-Toe</h1>
     <div class="chart">
-        <div id="b1" class="box">0</div>
-        <div id="b2" class="box">0</div>
-        <div id="b3" class="box">0</div>
-        <div id="b4" class="box">0</div>
-        <div id="b5" class="box">0</div>
-        <div id="b6" class="box">0</div>
-        <div id="b7" class="box">0</div>
-        <div id="b8" class="box">0</div>
-        <div id="b9" class="box">0</div>
+        <div id="b1" class="box"></div>
+        <div id="b2" class="box"></div>
+        <div id="b3" class="box"></div>
+        <div id="b4" class="box"></div>
+        <div id="b5" class="box"></div>
+        <div id="b6" class="box"></div>
+        <div id="b7" class="box"></div>
+        <div id="b8" class="box"></div>
+        <div id="b9" class="box"></div>
     </div>
+    <button class="reset-btn" onclick="reset()">Reset</button>
     <script src="script.js"></script>
 </body>
 
