--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+<!--   Priyanka Meshram   -->
     <h1>Tic-Tac-Toe</h1>
     <div class="chart">
         <div id="b1" class="box"></div>
